[package]
name = "blog"
version = "0.1.0"
edition = "2021"
description = "Personal blog in Rust/WASM, shipped by an AI harness brain."

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-utils = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "InputEvent", "KeyboardEvent", "Document", "Element"] }
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
js-sys = "0.3"
gloo-timers = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
